# spelling-words

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  README.md  README_LLM.md  REFERENCE.md  TASKS.md  pyproject.toml  wordlist.txt
.github/workflows/: ci.yml
scripts/: install_ffmpeg_static.sh  verify_setup.sh
spelling_words/: __init__.py  __main__.py  apkg_manager.py  audio_processor.py  cache_manager.py  cli.py  dictionary_client.py  word_list.py
tests/: __init__.py  test_apkg_manager.py  test_audio_processor.py  test_cache_manager.py  test_cli.py  test_config.py  test_dictionary_client.py  test_logging.py  test_word_list.py
tests/fixtures/: test_words.txt
